no need for multline enviro with 11p font

--- a/ia.tex
+++ b/ia.tex
@@ -111,9 +111,9 @@ Like glucose, GAP goes through another series of reactions catalyzed by multiple
 \medskip
 
 The net equation for the formation of pyruvate is thus given by:
-\begin{multline}
-    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ \\-> 2pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
-\end{multline} % TODO \ce{2pyruvate} issue
+\begin{equation}
+    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> 2pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
+\end{equation} % TODO \ce{2pyruvate} issue
 According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NADH, 2 ATP, 2 \ce{H2O}, and 2 \ce{H+}. If there is unreacted glucose, glycolysis will continue. However, a cell's supply of \ce{NAD+} is limited, so it must be regenerated. In aerobic respiration, the pyruvate goes through the tricarboxylic acid cycle to produce even more NADH that eventually gets oxidized to \ce{NAD+} during oxidative phosphorylation, which produces most of the ATP associated with aerobic respiration as a bonus. In anaerobic respiration, fermentation provides an alternate pathway to turn the NADH back to \ce{NAD+}.
 
 \medskip
@@ -132,14 +132,14 @@ In the second step, acetaldehyde gets reduced to ethanol and NADH gets oxidized 
 \end{equation}
 
 Equation (3) can be substituted in Equation (2) after some rearranging:
-\begin{multline*}
-    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ \\-> \textcolor{red}{\ce{2CH3CHO}} + \textcolor{red}{\ce{2CO2}} + 2ATP + 2NADH + 2H2O}
-\end{multline*}
+\begin{equation*}
+    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> \textcolor{red}{\ce{2CH3CHO}} + \textcolor{red}{\ce{2CO2}} + 2ATP + 2NADH + 2H2O}
+\end{equation*}
 
 Adding \ce{2H+} on both sides and substituting Equation (4)
-\begin{multline*}
-    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ + \textcolor{blue}{\ce{2H+}} \\-> \textcolor{blue}{\ce{2C2H5OH}} + \textcolor{blue}{\ce{2NAD+}} + 2ATP + 2H2O}
-\end{multline*}
+\begin{equation*}
+    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ + \textcolor{blue}{\ce{2H+}} -> \textcolor{blue}{\ce{2C2H5OH}} + \textcolor{blue}{\ce{2NAD+}} + 2ATP + 2H2O}
+\end{equation*}
 
 Cancelling \ce{2NAD+} on both sides gives:
 \begin{equation}
