element descriptions in equations to uppercase

--- a/ia.tex
+++ b/ia.tex
@@ -58,7 +58,7 @@ It is well known that yeast reacts with glucose to produce ethanol and carbon di
 
 Aerobic respiration is much more efficient and optimal than anaerobic respiration because of the significantly more ATP (adenosine triphosphate, energy carrying molecule) produced. The chemical formula for aerobic respiration is given below:
 \begin{equation}
-    \ce{\underset{\text{glucose}}{\ce{C6H12O6}} + 6O2 ->[cellular respiration] 6CO2 + 6H2O + ATP}
+    \ce{\underset{\text{Glucose}}{\ce{C6H12O6}} + 6O2 ->[cellular respiration] 6CO2 + 6H2O + ATP}
 \end{equation}
 
 Going into the details of aerobic respiration its three steps:
@@ -114,7 +114,7 @@ Like glucose, GAP goes through another series of reactions catalyzed by multiple
 
 The net equation for the formation of pyruvate is thus given by:
 \begin{equation}
-    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> 2pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
+    \ce{Glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> 2Pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
 \end{equation} % TODO \ce{2pyruvate} issue
 According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NADH, 2 ATP, 2 \ce{H2O}, and 2 \ce{H+}. If there is unreacted glucose, glycolysis will continue. However, a cell's supply of \ce{NAD+} is limited, so it must be regenerated. In aerobic respiration, the pyruvate goes through the tricarboxylic acid cycle to produce even more NADH that eventually gets oxidized to \ce{NAD+} during oxidative phosphorylation, which produces most of the ATP associated with aerobic respiration as a bonus. In anaerobic respiration, fermentation provides an alternate pathway to turn the NADH back to \ce{NAD+}.
 
@@ -125,22 +125,22 @@ According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NAD
 % TODO add more references
 For yeast,  alcoholic fermentation converts pyruvate into ethanol and carbon dioxide, both of with are waste products. It consists of two steps that are also catalyzed by enzymes. The first step in this conversion process involves the decarboxylation of pyruvate to acetaldehyde, producing carbon dioxide as a by product, as shown below:
 \begin{equation}
-    \ce{\underset{\text{pyruvate}}{\ce{CH3COCOO-}} + H+ -> \underset{\text{acetaldehyde}}{\ce{CH3CHO}} + CO2}
+    \ce{\underset{\text{Pyruvate}}{\ce{CH3COCOO-}} + H+ -> \underset{\text{Acetaldehyde}}{\ce{CH3CHO}} + CO2}
 \end{equation}
 
 In the second step, acetaldehyde gets reduced to ethanol and NADH gets oxidized to \ce{NAD+}, effectively regenerating \ce{NAD+} to be reused in glycolysis:
 \begin{equation}
-    \ce{CH3CHO + NADH + H+ -> \underset{\text{ethanol}}{\ce{C2H5OH}} + NAD}
+    \ce{CH3CHO + NADH + H+ -> \underset{\text{Ethanol}}{\ce{C2H5OH}} + NAD}
 \end{equation}
 
 Equation (3) can be substituted in Equation (2) after some rearranging:
 \begin{equation*}
-    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> \textcolor{red}{\ce{2CH3CHO}} + \textcolor{red}{\ce{2CO2}} + 2ATP + 2NADH + 2H2O}
+    \ce{Glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> \textcolor{red}{\ce{2CH3CHO}} + \textcolor{red}{\ce{2CO2}} + 2ATP + 2NADH + 2H2O}
 \end{equation*}
 
 Adding \ce{2H+} on both sides and substituting Equation (4)
 \begin{equation*}
-    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ + \textcolor{blue}{\ce{2H+}} -> \textcolor{blue}{\ce{2C2H5OH}} + \textcolor{blue}{\ce{2NAD+}} + 2ATP + 2H2O}
+    \ce{Glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ + \textcolor{blue}{\ce{2H+}} -> \textcolor{blue}{\ce{2C2H5OH}} + \textcolor{blue}{\ce{2NAD+}} + 2ATP + 2H2O}
 \end{equation*}
 
 Cancelling \ce{2NAD+} on both sides gives:
