prodecure and rxn velocity uncertainties

--- a/ia.tex
+++ b/ia.tex
@@ -40,7 +40,7 @@
 \pagenumbering{arabic}
 
 \section{Introduction}
-I have always enjoyed cooking as a mostly self-taught hobby. Having experimented with multiple aspects of cooking throughout my life eventually led me to explore baking, where I was fascinated by timelapse footages of bread rising in the oven. As such, I was inspired to make my own bread, following basic recipes online with a surface-level understanding of the chemistry involving the release of carbon dioxide from yeast fermentation. However, the realm of baking is very large and not limited to bread only, as there exist many types of doughs for pizza, puff pastry, cookies, etc. One notable difference between these different types of dough is the amount of sugar used, which led me to form my research question: \textbf{``The Relationship between Glucose Concentration and the Rate of Carbon Dioxide Production during the Fermentation Process of Yeast''}.
+I have always enjoyed cooking as a mostly self-taught hobby. Having experimented with multiple aspects of cooking throughout my life eventually led me to explore baking, where I was fascinated by timelapse footages of bread rising in the oven. As such, I was inspired to make my own bread, following basic recipes online with a surface-level understanding of the chemistry involving the release of carbon dioxide from yeast fermentation. However, the realm of baking is very large and not limited to bread only, as there exist many types of doughs for pizza, puff pastry, cookies, etc. One notable difference between these different types of dough is the amount of sugar used, and although some of these repices do not call for yeast, I was still interested by its function in baking, which led me to form my research question: \textbf{``The Relationship between Glucose Concentration and the Rate of Carbon Dioxide Production during the Fermentation Process of Yeast''}.
 
 \section{Background}
 
@@ -79,22 +79,22 @@ However, the focus of this internal assessment is on anaerobic respiration of ye
 The first step of glycolysis converts glucose into fructose 1,6-biphosphate (F-1,6-BP), outlined in the figure below:
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\linewidth]{figures/figure_01.png}
-    \caption{Conversion of glucose to F-1,6-BP. Intermediate steps are ommited. Image created by moi}
+    \includegraphics[width=0.8\linewidth]{figures/figure_01.png}
+    \caption{Conversion of glucose to F-1,6-BP. Intermediate steps are represented by the arrows.}
     \label{fig:figure1}
 \end{figure}
-
-\medskip
 
 Glucose goes through a series of reactions catalyzed by multiple enzymes, which consumes 2 ATP in the process. ATP turns to ADP (adenosine diphosphate) when a phosphate group (\ce{HPO_{4}^{2-}}) gets transferred from the ATP to the sugars that glucose gets broken down into, eventually leading to the formation of F-1,6-BP.
 
 \medskip
 
 The second step of glycolysis involves splitting F-1,6-BP into 2 three-carbon fragments, glyceraldehyde 3-phosphate (GAP) and dihydroxyacetone phosphate (DHAP), outlined in the figure below:
-
-\medskip
-
-[fig]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.55\linewidth]{figures/figure_02.png}
+    \caption{Conversion of F-1,6-BP to GAP and DHAP}
+    \label{fig:figure1}
+\end{figure}
 
 \medskip
 
@@ -103,10 +103,12 @@ When catalyzed with an enzyme, F-1,6-BP splits into the three-carbon fragments b
 \medskip
 
 The third and final step of glycolysis converts the DHAP to pyruvate, another three-carbon molecule while producing ATP, outlined in the figure below:
-
-\medskip
-
-[fig]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.886\linewidth]{figures/figure_03.png}
+    \caption{Conversion of DHAP to pyruvate. Intermediate steps are represented by the arrows.}
+    \label{fig:figure1}
+\end{figure}
 
 \medskip
 
@@ -369,24 +371,21 @@ The following materials were used in my experiment:
 The experiment was carried out following the procedure below:
 \begin{enumerate}[topsep=\parskip, noitemsep]
     % \setlength\itemsep{-5pt}
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem impsum
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
-    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Approximately 0.5\,\si{L} of deionized water was prepared in a 1\,\si{L} beaker and placed on a magnetic stirring hotplate.
+    \item The Vernier LabQuest was plugged in with a Vernier temperature probe.
+    \item THe water was heated until it reached approximately 37\,\si{\celsius}. The temperature of the hotplate was kept at around 40\,\si{\celsius} to 45\,\si{\celsius} to account for cooling.
+    \item 0.1\,\si{g} of glucose and 2\,\si{g} of Red Star active dry yeast were weighed
+    \item The yeast was deposited in the 250\,\si{ml} Nalgene bottle with the magnetic stir bar.
+    \item 100\,\si{ml} of water measured with a graduated cylinder was poured from the 1\,\si{L} beaker to the Nalgene bottle.
+    \item The bottle was transferred to the warm water bath with its cap was screwed on.
+    \item The \ce{CO2} gas sensor was connected and calibrated to read high concentrations of \ce{CO2} gas. The LabQuest was set to 20 seconds per sample for 10 minutes.
+    \item Magnetic stirring was activated to mix the yeast solution to ensure that all the yeast was dissolved and activated. During this phase, observations were recorded and the \ce{CO2} gas sensor was warmed up to read a baseline concentration.
+    \item After the yeast was activated glucose was deposited in the bottle and the \ce{CO2} gas sensor was immediately swapped with the cap to block \ce{CO2} from escaping.
+    \item The Nalgene-\ce{CO2} sensor setup was lightly swirled around the beaker to allow the stir bar to reach all corners of the bottle.
+    \item After 10 minutes of fermentation, data was exported to a USB and the \ce{CO2} gas sensor was removed. Observations were made as the reaction took place.
+    \item The \ce{CO2} gas sensor was wiped to remove condensation and fanned to remove residual \ce{CO2}. The Nalgene bottle was thoroughly rinsed and fanned to remove any yeast-glucose solution and residual \ce{CO2} gas.
+    \item THe 1\,\si{L} beaker was filled with more distilled water if there was not enough to half-submerge the Nalgene bottle.
+    \item Steps 3 to 14 were repeated until 2 trials of data were collected for 0.1\,\si{g}, 0.25\,\si{g}, 0.5\,\si{g}, and 1\,\si{g} of glucose.
 \end{enumerate}
 
 \section{Data Collection and Processing}
@@ -411,24 +410,22 @@ The following table displays qualitative observations that were observed for dif
     \hline
     \rowcolor[HTML]{CCCCCC} Mass /\ce{g} $\pm0.01\,\si{g}$ & Concentration /\si{M} & Observations \\
     \hline
-    0.1 & $0.0056 \pm 0.0006$ & Enough condensation to cover top of bottle, solution was very consistent and smooth \\
+    0.10 & $0.0056 \pm 0.0006$ & Enough condensation to cover top of bottle, solution was very consistent and smooth \\
     \hline
     0.25 & $0.0139 \pm 0.0006$ & A lot of condensation, considerably more than 0.1\,\si{g}, some condensation started to drip back into the solution \\
     \hline
-    0.5 & $0.0278 \pm 0.0007$ & When mixing solution, some white foam appeared on top, a good amount of condensation was formed \\
+    0.50 & $0.0278 \pm 0.0007$ & When mixing solution, some white foam appeared on top, a good amount of condensation was formed \\
     \hline
-    1.0 & $0.0555 \pm 0.0008$ & Less condensation was observed than smaller concentrations, traces of very fine precipitate left at the bottom, depsite stirring with a stir bar \\
+    1.00 & $0.0555 \pm 0.0008$ & Less condensation was observed than smaller concentrations, traces of very fine precipitate left at the bottom, depsite stirring with a stir bar \\
     \hline
 \end{tabularx}
 \end{table}
 
 A sample calculation for the concentration uncertainty using the basic method is provided below for mass 0.5\,\si{g}. The molar mass of glucose is taken to be 180.18\,\si{g.mol^{-1}} \parencite{ref}:
 \begin{align*}
-    c &= \frac{n}{v} \\
-    &= \frac{m/M}{v} \\  %% TODO better equations
-    &= 0.02775\,\si{mol.L^{-1}} \\
-    \Delta c &= c\left(\frac{\Delta m}{m} + \frac{\Delta v}{v}\right) \\
-    &= 0.02775\left(\frac{0.01}{0.5} + \frac{0.0005}{0.1}\right) \\
+    c &= \frac{n}{v} = \frac{m/M}{v} \\
+    &= \frac{0.5/180.18}{0.1} = 0.02775\,\si{mol.L^{-1}} \\  %% TODO better equations
+    \Delta c &= c\left(\frac{\Delta m}{m} + \frac{\Delta v}{v}\right) = 0.02775\left(\frac{0.01}{0.5} + \frac{0.0005}{0.1}\right) \\
     &= 0.000694\,\si{mol.L^{-1}} \\
     \therefore\,c &= (0.0278 \pm 0.0007)\,\si{mol.L^{-1}}
 \end{align*}
@@ -458,13 +455,13 @@ The following table displays the equation for the line of best fit and $R^2$ val
     \hline
     \rowcolor[HTML]{CCCCCC} Glucose concentration /\si{M} & Line of best fit equation and $R^2$ for trial 1 & Line of best fit equation and $R^2$ for trial 2 & Average slope (initial reation velocity) /\si{ppm.s^{-1}} \\
     \hline
-    $0.0056 \pm 0.0006$ & $y=35.324x, R^2=0.9962$ & $y=81.96x, R^2=0.9936$ & \dots \\
+    $0.0056 \pm 0.0006$ & $y=35.324x, R^2=0.9962$ & $y=81.96x, R^2=0.9936$ & $59 \pm 20$ \\
     \hline
-    $0.0139 \pm 0.0006$ & $y=59.095x, R^2=0.9805$ & $y=85.884x, R^2=0.9979$ & \dots \\
+    $0.0139 \pm 0.0006$ & $y=59.095x, R^2=0.9805$ & $y=85.884x, R^2=0.9979$ & $72 \pm 10$ \\
     \hline
-    $0.0278 \pm 0.0007$ & $y=59.426x, R^2=0.9954$ & $y=82.694x, R^2=0.9886$ & \dots \\
+    $0.0278 \pm 0.0007$ & $y=59.426x, R^2=0.9954$ & $y=82.694x, R^2=0.9886$ & $71 \pm 10$ \\
     \hline
-    $0.0555 \pm 0.0008$ & $y=36.929x, R^2=0.9789$ & $y=68.013x, R^2=0.9648$ & \dots \\
+    $0.0555 \pm 0.0008$ & $y=36.929x, R^2=0.9789$ & $y=68.013x, R^2=0.9648$ & $52 \pm 20$ \\
     \hline
 \end{tabularx}
 \end{table}
@@ -476,11 +473,7 @@ With the processed data in tablex, reaction velocity can be plotted against gluc
 \section{Evaluation}
 
 \section{Conclusion}
-Although the experiment did not match up perfectly with the theory, the results still made sense as a whole for a sufficient level of analysis. Evidently, this experiment models an extremely downscaled version of the many aspects involved in baking, thus presenting itself as more of a study into fermentation and enzyme kinetics rather than a practical guide to baking the best loaf of bread.
-
-\medskip
-
-The explanation of yeast producing carbon dioxide to cause bread to rise is widely accepted by many, but also an understatement, because it often fails to acknowledge the complex and fascinating chemistry involved behind the scenes.
+Although the experiment did not match up perfectly with the theory, the results still made sense as a whole for a sufficient level of analysis. Evidently, this experiment models an extremely downscaled version of the many aspects involved in baking, thus presenting itself as more of a study into fermentation and enzyme kinetics rather than a practical guide to baking the best loaf of bread. In conclusion, the explanation of yeast producing carbon dioxide to cause bread to rise is widely accepted by many, but also an understatement, because it often unacknowledges the complex and fascinating chemistry involved behind the scenes.
 
 \nocite{*}
 
